# 400Final

./: CMakeLists.txt  main.cpp
BCV/: solutionThreeBCV.cpp  solutionThreeBCV.h
Dynamic_Programming/: DP.cpp  DP.h
Maximise_Busyness/: solutionTwoMaximiseBusyness.cpp  solutionTwoMaximiseBusyness.h
OTSU/: solutionOneOTSU.cpp  solutionOneOTSU.h  solutionOneOtsu.cpp
SOL5/: sol5.cpp  sol5.h
